--- a/style/customers.module.css
+++ b/style/customers.module.css
@@ -1,18 +1,10 @@
 .navContainer {
   position: absolute;
   right: 0;
-  top: calc(50% + (100% + 544px) / 2);
-  transform: translateY(50%);
+  top:0;
   z-index: 10;
   display: flex;
   gap: 8px;
-}
-
-@media (max-width:1024px) {
-  .navContainer{
-  top: calc(50% + (100% + 340px) / 2);
-    
-  }
 }
 
 .navBtn {
@@ -33,43 +25,4 @@
   background:black;
   color: white;
 }
-
-
-
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #444;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-
-.swiperWrapper :global(.swiper-pagination-bullet) {
-  background-color: #000000;
-  /* opacity: 0.5; */
-  width: 30px;
-  height: 10px;
-  margin: 0 6px;
-  border-radius: 12px;
-  transition: all 0.3s ease;
-}
-
-.swiperWrapper :global(.swiper-pagination-bullet-active) {
-  background-color: #151515; /* amber-400 */
- width: 80px !important;
-          border-radius: 10px !important;
-          transition: width 0.3s ease !important;
-}
-
 
